# aws_service_transcribe

./: CMakeLists.txt  README.md  demo.cpp  transcribe.cpp
include/: transcribe.h
